k8s/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bebee
  labels:
    name: bebee
    app.kubernetes.io/part-of: bebee
    environment: base
